--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shortly",
   "version": "0.1.0",
-  "private": true,
+  "private": "true",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,8 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://dimakrugly.github.io/shortly",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
